feat(migration/naming): remove constraint, and change the response format
