# backend/openapi.yaml
@@ -140,13 +140,12 @@ paths:
                     type: string
                   role:
                     type: string
-                  current_organization_id:
-                    type: integer
+                  organization_id:
+                    type: string
         "400":
           description: Missing or invalid input
         "409":
-          description: User already exists
-          
+          description: User already exists         
   /auth/login:
     post:
       summary: Login with account and password
@@ -160,7 +159,7 @@ paths:
               properties:
                 account:
                   type: string
-                  example: boss@example.com
+                  example: user@example.com
                 password:
                   type: string
                   example: mysecret
@@ -202,19 +201,21 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: integer
+                  user_id:
+                    type: string
                   email_account:
                     type: string
-                  name:
+                  user_name:
                     type: string
                   user_type:
                     type: string
                     enum: [shop, customer]
                   organization_id:
-                    type: integer
+                    type: string
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
     put:
       summary: Update current logged-in user profile
       tags: [Authorization]
@@ -241,17 +242,17 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: integer
+                  user_id:
+                    type: string
                   email_account:
                     type: string
-                  name:
+                  user_name:
                     type: string
                   user_type:
                     type: string
                     enum: [shop, customer]
-                  organization_id:
-                    type: integer
+                  organization_name:
+                    type: string
         "400":
           description: Invalid input
         "401":
@@ -272,8 +273,7 @@ paths:
                   status_message:
                     type: string
         "401":
-          description: Unauthorized
-                
+          description: Unauthorized           
   /product_types:
     get:
       summary: Get all available product types from this organization 
@@ -286,14 +286,17 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
+                type: object
+                properties:
+                  product_types:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        product_type_id:
+                          type: string
+                        product_type_name:
+                          type: string
         "500":
           description: Server error
     post:
@@ -308,16 +311,32 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                product_type_name:
                   type: string
-                  example: Green Tea 2025
+                  example: Green Tea 2025 
       responses:
         "201":
           description: Product type created successfully
           content:
             application/json:
-                  name:
+              schema:
+                type: object
+                properties:
+                  product_type_id:
                     type: string
+                  product_type_name:
+                    type: string
+                  organization_id: 
+                    type: string
+                  organization_name:
+                    type: string
+                  created_at: 
+                    type: string
+                  updated_at: 
+                    type: string
+                  order_id:
+                    type: int
+
         "400":
           description: Invalid input
         "401":
@@ -334,7 +353,7 @@ paths:
           - in: path
             name: product_type_id
             required: true
-            schema: { type: integer, minimum: 1 }
+            schema: { type: string, minimum: 1 }
         responses:
           "200":
             description: Product type details
@@ -343,11 +362,17 @@ paths:
                 schema:
                   type: object
                   properties:
-                    id:
-                      type: integer
-                    name:
+                    product_type_id:
                       type: string
-                    description:
+                    product_type_name:
+                      type: string
+                    organization_id:
+                      type: string
+                    organization_name:
+                      type: string
+                    created_at: 
+                      type: string
+                    updated_at:
                       type: string
           "404":
             description: Product type not found
@@ -360,7 +385,7 @@ paths:
           - in: path
             name: product_type_id
             required: true
-            schema: { type: integer, minimum: 1 }
+            schema: { type: string, minimum: 1 }
         requestBody:      
           required: true
           content:
@@ -379,8 +404,8 @@ paths:
                 schema:
                   type: object
                   properties:
-                    id:
-                      type: integer     
+                    product_type_id:
+                      type: string   
                     name:
                       type: string
                     description:
@@ -400,7 +425,7 @@ paths:
           - in: path
             name: product_type_id
             required: true        
-            schema: { type: integer, minimum: 1 }
+            schema: { type: string, minimum: 1 }
         responses:
           "200":
             description: Product type deleted successfully
@@ -411,14 +436,12 @@ paths:
                   properties:
                     status message:
                       type: string
-                    id:
-                      type: integer
-                    product type_name:
+                    product_type_id:
+                      type: string
+                    product_type_name:
                       type: string
                     order_id:
                       type: integer
-                    name:
-                      type: string
                     
           "401":
             description: Unauthorized     
@@ -618,7 +641,7 @@ paths:
                   type: object
                   properties:
                     step_id:
-                      type: integer
+                      type: string
                     tag:
                       type: string
                     order:
@@ -635,7 +658,7 @@ paths:
         - name: product_id  
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       requestBody:
         required: true
         content:
@@ -647,7 +670,7 @@ paths:
                   type: string
                   example: raw
                 tag_id:
-                  type: integer
+                  type: string
                   example: 1
                 sort_order:
                   type: integer
@@ -685,11 +708,11 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       responses:
         "200":
           description: List of emissions
@@ -719,11 +742,11 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       requestBody:    
         required: true
         content:
@@ -755,8 +778,8 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: integer
+                  emission_id:
+                    type: string
                   message:
                     type: string
   /products/{product_id}/emissions/summary:
@@ -769,11 +792,11 @@ paths:
         - name: product_type_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
         - name: product_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       responses:
         "200":
           description: Emissions summary
@@ -809,11 +832,11 @@ paths:
                   type: object
                   properties:
                     emission_id:
-                      type: integer
+                      type: string
                     product_type_id:
-                      type: integer
+                      type: string
                     product_id:
-                      type: integer
+                      type: string
                     amount:
                       type: number
                       format: float
@@ -830,7 +853,7 @@ paths:
         - name: emission_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }     
+          schema: { type: string, minimum: 1 }     
       responses:
         "200":
           description: Emission details
@@ -858,7 +881,7 @@ paths:
         - name: emission_id
           in: path
           required: true
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       requestBody:      
         required: true
         content:
@@ -895,7 +918,7 @@ paths:
         - name: emission_id
           in: path
           required: true        
-          schema: { type: integer, minimum: 1 }
+          schema: { type: string, minimum: 1 }
       responses:  
         "200":
           description: Emission deleted successfully
@@ -977,8 +1000,8 @@ paths:
                     items:
                       type: object
                       properties:
-                        id:
-                          type: integer
+                        factor_id:
+                          type: string
                         name:
                           type: string
                         coefficient:
