# backend/routes/products.py
@@ -18,6 +18,7 @@ from models.steps_model import(
                         create_steps,
                         )
 
+from routes.helpers import display_id, parse_display_id
 
 # Blueprint for product routes under a product type
 product_types_products_bp = Blueprint('products', __name__)
@@ -34,7 +35,9 @@ def get_all(type_id):
     org = get_user_organization(uid)
     org_id = org["id"]
     ps = list_products(org_id, type_id)
-    return jsonify(products = ps), 200
+    ps["product_id"] = display_id("products", ps["id"])
+    ps.pop("id")
+    return jsonify(ps), 200
 
 
 @product_types_products_bp.post("/products")
@@ -55,29 +58,31 @@ def create(type_id):
 @product_bp.get("")
 @jwt_required()
 def get(product_id):
-    product = fetch_product(product_id)
-    if not product:
+    pd = fetch_product(parse_display_id("PD", product_id))
+    if not pd:
         return jsonify({"error": "Product not found"}), 404
-    return jsonify(product), 200
+    pd["product_id"] = display_id("products", pd["id"])
+    pd.pop("id")
+    return jsonify(pd), 200
 
 
 @product_bp.put("")
 @jwt_required()
 def update(product_id):
     data = request.get_json()
-    organization_id = data.get("organization_id")
-    type_id = data.get("type_id")
+    organization_id = parse_display_id("ORG", data.get("organization_id"))
+    product_type_id = parse_display_id("PT", data.get("product_type_id"))
     name = data.get("name")
     serial_number = data.get("serial_number")
     code = data.get("code")
-    update_product(product_id, organization_id, type_id, name, serial_number, code)
+    update_product(parse_display_id("PD", product_id), organization_id, product_type_id, name, serial_number, code)
     return jsonify({"message": "Product updated"}), 200
 
 
 @product_bp.delete("")
 @jwt_required()
 def delete(product_id):
-    delete_product(product_id)
+    delete_product(parse_display_id("PD", product_id))
     return jsonify({"message": "Product deleted"}), 200
 
 
@@ -85,16 +90,16 @@ def delete(product_id):
 @product_bp.get("<int:product_id>/steps/<string:stage_id>")
 @jwt_required()
 def get_steps(product_id, stage_id):
-    steps = get_steps_under_product_stage(product_id, stage_id) 
-    return jsonify(steps=steps), 200
+    steps = get_steps_under_product_stage(parse_display_id("PD", product_id), parse_display_id("STG", stage_id)) 
+    return jsonify(steps), 200
 
 @product_bp.post("<int:product_id>/steps")
 @jwt_required()
 def create(product_id):
     data = request.get_json()
     name = data.get("name")
-    stage_id = data.get("stage_id")
-    tag_id = data.get("tag_id")
+    stage_id = parse_display_id("STG", data.get("stage_id"))
+    tag_id = parse_display_id("TAG", data.get("tag_id"))
     sort_order = data.get("sort_order")
-    create_steps(product_id, stage_id , tag_id, name, sort_order)  
+    create_steps(parse_display_id("PD", product_id), stage_id , tag_id, name, sort_order)  
     return jsonify({"message": "Step created under product"}), 201
